--- a/src/main/resources/dubbo.properties
+++ b/src/main/resources/dubbo.properties
@@ -1,10 +1,10 @@
 # 项目名称设置，必须
-dubbo.application.name=application_datasync
+dubbo.application.name=application_
 
 dubbo.application.logger=slf4j
 
 # 包扫描设置，必须
-dubbo.annotation.package=xxx.xxx.xxx
+dubbo.annotation.package=dubbo.xxx.xxx
 
 # 接口协议
 dubbo.protocol.name=dubbo
